feature : updating readme and .env example, and delete unused code

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,6 @@
-# Claude Bridge Configuration
-# Copy this file to .env and customize the paths for your setup
-
-# MCP Server Paths
-GHIDRA_BRIDGE_PATH=D:/Irvan/Work/MCP/GhidraMCPFrida/bridge_mcp_ghidra.py
-GHIDRA_SERVER_URL=http://127.0.0.1:8080/
-JADX_SERVER_PATH=D:/Irvan/Work/MCP/JadxMCPServer/jadx-mcp-server-v3.3.0/jadx-mcp-server/jadx_mcp_server.py
-UV_EXECUTABLE=C:/Users/Evan/.local/bin/uv.exe
-JADX_WORKING_DIR=D:/Irvan/Work/MCP/JadxMCPServer/jadx-mcp-server-v3.3.0/jadx-mcp-server/
-JADX_PORT=8650
-
 # Bridge Server Settings
 BRIDGE_HOST=0.0.0.0
 BRIDGE_PORT=8090
 
-# Optional: Custom Claude MCP Config
-# CLAUDE_MCP_CONFIG=/path/to/custom/mcp-config.json
+#CODEX PATH 
+codex_path=C:\Users\<USER>\AppData\Roaming\npm\codex.CMD
