--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - ./scripts:/app/scripts
       - ./tmp:/app/tmp
       - ./frida-server:/app/frida-server
+      - ./temp_generated.js:/app/temp_generated.js
     environment:
       - FLASK_ENV=production
       - ADB_SERVER_SOCKET=tcp:host.docker.internal:5037
